--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     var _hmt = _hmt || [];
     (function () {
       var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?1c4beb2f485ef703f650eec7520f2d41";
+      hm.src = "";
       var s = document.getElementsByTagName("script")[0];
       s.parentNode.insertBefore(hm, s);
     })();
   </script>
   <!-- google analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5GCJQLDDLF"></script>
+  <script async src=""></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
