--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       s.parentNode.insertBefore(hm, s);
     })();
   </script>
-  <!-- google analytics -->
-  <script async src=""></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-5GCJQLDDLF');
-  </script>
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-D8XRE07WH3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-D8XRE07WH3');
+</script>
   <!-- end of analytics -->
 </head>
 
